--- a/css/style.css
+++ b/css/style.css
@@ -145,5 +145,33 @@ header {
 /*******************************************/
 
 
-
+form {
+width:300px;
+margin:0 auto;
+position: relative;
+}
+form:after {
+content: "▾";
+width:10px;
+height: 10px;
+display: block;
+position: absolute;
+font-size: 20px;
+right:16px;
+top:16px;
+pointer-events:none;
+}
+select {
+width:100%;
+height:60px;
+padding:5px 15px;
+display: block;
+appearance: none;
+-webkit-appearance: none;
+-moz-appearance: none;
+font-size: 20px;
+line-height: 44px;
+cursor: pointer;
+text-transform: uppercase;
+}
 
